# gitversion_build_rs

./: Cargo.toml  GitVersion.yml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
src/: lib.rs
